@@ -54,6 +54,10 @@ Revision 0.1.8rc2
 - Fix to broken REAL type decoding handling.
 - Fix to BitString and OctetString decoders dealing with constructed
   encoding -- it used to be possible to embed other types in substrate.
+- Fix to end-of-octest sentinel handling:
+  * require strict two-zeros sentinel encoding
+  * recognize EOO sentinel only when explicitly requested by caller
+    of the decoder (via allowEoo=True parameter)
 
 Revision 0.1.7
 --------------
